<resources>
    <string name="app_name">Proyecto_Trimestre_2_Cafeteria</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ac_pedir">Pedir</string>
    <string name="ac_tipo">Tipo:</string>
    <string name="ac_leche">Leche:</string>
    <string name="ac_sin_lactosa">Sin Lactosa</string>
    <string name="ac_crema">Crema</string>
    <string name="ac_chocolate">Chocolate</string>
    <string name="ac_hielo">Hielo</string>
    <string name="ac_precio">Precio:</string>
    <string name="ad_resumen">Resumen:</string>
    <string name="ad_hora_de_recogida">Hora de recogida:</string>
    <string name="ad_total">Total:</string>
    <string name="ad_confirmar_pedido">Confirmar Pedido</string>
    <string name="al_usuario">Usuario</string>
    <string name="al_contraseña">Contraseña</string>
    <string name="al_usuari">Usuario</string>
    <string name="al_contrase">Contraseña</string>
    <string name="al_entrar">Entrar</string>
    <string name="al_red_local">Red Local</string>
    <string name="al_red_externa">Red Externa</string>
    <string name="ap_actualizar_pedidos">Actualizar Pedidos</string>
    <string name="apd_nombre_cliente">Nombre Cliente</string>
    <string name="dp_contraseñas">Contraseñas:</string>
    <string name="dp_aceptar">Aceptar</string>
    <string name="lp_nombre_del_cliente">Nombre del Cliente</string>
    <string name="lpp_nombre_del_cafe">Nombre del Café</string>
    <string name="registrar">registrar</string>
    <string name="email">email</string>
    <string name="telefono">telefono</string>

</resources>
