<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a2dam.fila1.grupo.proyecto_trimestre_2_cafeteria.ActivityLogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_login"
        android:scaleType="centerCrop"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_general"
        android:background="@color/tono_negro">

        <ImageView
            android:id="@+id/iv_lg_icono"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="44dp"
            android:elevation="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_hot_drink" />

        <EditText
            android:id="@+id/et_lg_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="77dp"
            android:ems="10"
            android:hint="@string/al_usuari"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/fondo_blanco"
            android:textColorHint="#90ffffff"
            android:textColorLink="?attr/colorPrimaryDark"
            android:textSize="@dimen/text_size_normal"
            android:theme="@style/AppThemeVerde"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_lg_icono" />

        <EditText
            android:id="@+id/et_lg_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general"
            android:ems="10"
            android:hint="@string/al_contrase"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textColorHint="#90ffffff"
            android:textColorLink="?attr/colorPrimaryDark"
            android:textSize="@dimen/text_size_normal"
            android:theme="@style/AppThemeVerde"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lg_usuario" />

        <ImageView
            android:id="@+id/tv_lg_usuario"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_left_iconos"
            android:src="@drawable/ic_user_login"
            android:text="@string/al_usuario"
            app:layout_constraintBottom_toBottomOf="@+id/et_lg_usuario"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_lg_usuario"
            app:layout_constraintVertical_bias="0.3" />

        <ImageView
            android:id="@+id/tv_lg_pass"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_left_iconos"
            android:src="@drawable/ic_candado"
            app:layout_constraintBottom_toBottomOf="@+id/et_lg_pass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_lg_pass"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/btn_registrologin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/tono_negro_oscuro"
            android:elevation="3dp"
            android:text="Registro"
            android:textColor="@color/blanco"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/et_lg_pass" />

        <Button
            android:id="@+id/btn_lg_entrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:background="@color/tono_negro_oscuro"
            android:elevation="3dp"
            android:text="@string/al_entrar"
            android:textColor="@color/blanco"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrologin" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
